--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,15 @@
     <application
         android:name=".Common.SysApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/xiebo_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".LoginActivity"
-                    android:configChanges="orientation|screenSize|keyboardHidden"
-                    android:windowSoftInputMode="stateHidden">
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,6 +25,7 @@
         </activity>
 
         <activity android:name=".FeagmentActivity"
+                  android:screenOrientation="portrait"
                   android:configChanges="orientation|screenSize|keyboardHidden"
                   android:windowSoftInputMode="adjustPan"></activity>
     </application>
